--- a/properties/config.properties
+++ b/properties/config.properties
@@ -1,17 +1,17 @@
 #for database
 database.url=jdbc:db2://192.168.3.127:50000/PDWDB:currentSchema=PDWDB;
 database.driver=com.ibm.db2.jcc.DB2Driver
-database.username=db2admin
-database.password=NZPJPCOcM+QE9KjbIpH8PQ==
-database.schema=PDWDB
+database.username=
+database.password=
+database.schema=
 database.viewname=SSREPORT
 database.nonworkingTable=NONWORKINGDAYS_TBL
 
 #for email
-email.toMail=sipdevelopermail@gmail.com
-email.from=qarah5.sip@gmail.com
-email.username=qarah5
-email.password=NZPJPCOcM+QE9KjbIpH8PQ==
+email.toMail=
+email.from=
+email.username=
+email.password=
 email.host=smtp.gmail.com
 email.port=25
 email.subject=SSReport
